# Proyecto2-bd2

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  models.py
app/models/: __init__.py  actor.py  common.py  consultas.py  relaciones.py  resena.py  serie.py  usuario.py
app/repositories/: __init__.py  _helpers.py  actores.py  consultas.py  estudios.py  generos.py  plataformas.py  relaciones.py  resenas.py  series.py  usuarios.py
app/routers/: actores.py  admin.py  consultas.py  estudios.py  generos.py  plataformas.py  relaciones.py  resenas.py  series.py  usuarios.py
data/: actores.csv  estudios.csv  generar_datos.py  generos.csv  plataformas.csv  rel_actua_en.csv  rel_dirige.csv  rel_en_lista.csv  rel_escribio.csv  rel_le_gusta.csv  rel_pertenece_a.csv  rel_produjo.csv  rel_sigue_a.csv  rel_similar_a.csv  rel_sobre.csv  rel_transmite.csv  rel_vio.csv  resenas.csv  series.csv  usuarios.csv
docs/: grafo.md  queries-rubrica.md  roadmap-persona1.md  script-video.md
front/: index.html  package-lock.json  package.json
front/src/: App.jsx  api.js  eslint.config.js  index.css
front/src/components/: Sidebar.jsx  ui.jsx
front/src/pages/admin/: Other.jsx  Series.jsx
front/src/pages/usuario/: Pages.jsx
scripts/: reset.py  seed.py
tests/: conftest.py  test_persona1_api.py  test_persona1_integration.py
